AC_INIT([Jitpression], [0.1], [perutka.ondrej@gmail.com], [jitpression])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 no-define -Wall])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
AM_PROG_AR
AC_PROG_CC([clang])
AC_PROG_CXX([clang++])
LT_INIT([disable-static])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
